prevent wrapping of basic sidebar links

--- a/MoinMoin/themes/basic/static/custom-less/theme.less
+++ b/MoinMoin/themes/basic/static/custom-less/theme.less
@@ -165,6 +165,14 @@ a:focus.moin-showhide {
   overflow: hidden;
 }
 
+.moin-sidebar-panels a {
+  white-space: nowrap;
+}
+
+.moin-sidebar-panels .moin-showhide a {
+  white-space: normal;
+}
+
 .moin-sidebar-panels a .hidden-sm,
 .moin-sidebar-panels a .hidden-xs {
   display: inline !important;
